  * Update Tag: field to the latest vocabulary. 
  * Use binary:Version instead of deprecated Source-Version substvar.
  * Update CVSROOT in tarball.sh.
  * Explicitely point to LGPL 2.1 in debian/copyright.
  * Update menu entry section.
  * Do not ignore make errors on clean.
  * Switch configuration variables to simply expanded ones in debian/rules.

 -- Guillem Jover <guillem@debian.org>  Tue,  3 Oct 2006 07:17:36 +0300

bochs (2.3-2) unstable; urgency=low

  * Install the note.gif only if building the binary independent packages.
  * Make the bochs wrapper exec the real binary, to avoid unneecessary
    running processes.

 -- Guillem Jover <guillem@debian.org>  Mon, 18 Sep 2006 03:17:02 +0300

bochs (2.3-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/00_base.patch: Sync.
    - debian/patches/03_g++-4.1.patch: Integrated upstream. Remove.
    - debian/patches/04_wx2.6.patch: Likewise.
    - debian/patches/03_redolog_FTBFS.patch: New file. Fix build failure.
    - Documentation now uses index.html instead of book1.html. Remove now
      unneeded debian/bochs-doc.links. (Closes: #380380)
  * Switched to quilt:
    - Add new debian/patches/series file.
    - Add Build-Depends on 'quilt (>= 0.40)'.
    - Include quilt.make from debian/rules.
    - Remove now unused debian/patch.mk.
  * Now using Standards-Version 3.7.2 (no changes needed).
  * Add 2006 to the copyright years in debian/copyright.
  * Remove obsolete template note and all debconf support with it.
  * Remove code to strip possible RPATH in SDL plugin as it should not contain
    it anymore, do not Build-Depend on chrpath anymore.
  * Use source:Version in bochs' bochsbios Depencency, to make the package
    binNMU safe, and Build-Depend on dpkg 1.13.19.
  * Fix manpage warning due to unwrappable long line by using a table.
    - debian/patches/04_man_table.patch: New file.
  * Include the note.gif image in the bochs-doc package. (Closes: #198766)