@@ -59,6 +59,11 @@ clean: unpatch
 	rm -f misc/sb16/sb16ctrl
 	[ ! -f Makefile ] || $(MAKE) dist-clean
 	
+	-test -r /usr/share/misc/config.sub && \
+	  cp -fu /usr/share/misc/config.sub config.sub
+	-test -r /usr/share/misc/config.guess && \
+	  cp -fu /usr/share/misc/config.guess config.guess
+	
 	dh_clean
 
 configure: configure.in
